; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/cadence/extr_macb_main.c_macb_tx_skb.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/cadence/extr_macb_main.c_macb_tx_skb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.macb_tx_skb = type { i32 }
%struct.macb_queue = type { i32, %struct.macb_tx_skb* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.macb_tx_skb* (%struct.macb_queue*, i32)* @macb_tx_skb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.macb_tx_skb* @macb_tx_skb(%struct.macb_queue* %0, i32 %1) #0 {
  %3 = alloca %struct.macb_queue*, align 8
  %4 = alloca i32, align 4
  store %struct.macb_queue* %0, %struct.macb_queue** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.macb_queue*, %struct.macb_queue** %3, align 8
  %6 = getelementptr inbounds %struct.macb_queue, %struct.macb_queue* %5, i32 0, i32 1
  %7 = load %struct.macb_tx_skb*, %struct.macb_tx_skb** %6, align 8
  %8 = load %struct.macb_queue*, %struct.macb_queue** %3, align 8
  %9 = getelementptr inbounds %struct.macb_queue, %struct.macb_queue* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i64 @macb_tx_ring_wrap(i32 %10, i32 %11)
  %13 = getelementptr inbounds %struct.macb_tx_skb, %struct.macb_tx_skb* %7, i64 %12
  ret %struct.macb_tx_skb* %13
}

declare dso_local i64 @macb_tx_ring_wrap(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
